fix social icon being too small

--- a/css/style.css
+++ b/css/style.css
@@ -176,4 +176,18 @@ a:hover {
 		font-weight: 150px;
 		line-height: 8vh;
 	}
+
+	.socialContainer {
+		padding: 0.5rem;
+	}
+
+	#social1 {
+		width: 50px;
+		height: 50px;
+	}
+
+	#social2 {
+		width: 50px;
+		height: 50px;
+	}
 }
